[gd_scene load_steps=2 format=3 uid="uid://b2q5gieiv8h4w"]

[ext_resource type="Script" uid="uid://b847s8pp18e36" path="res://scripts/character_sheet.gd" id="1_2ycnj"]

[node name="CharacterSheet" type="CanvasLayer"]
script = ExtResource("1_2ycnj")

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(310, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -200.0
offset_right = 155.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainLayout" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2
text = "KARAKTER STATLARI"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2
text = "Seviye: 1"

[node name="PointsLabel" type="Label" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2
text = "Kalan Puan: 0"

[node name="HSeparator" type="HSeparator" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2

[node name="StatsLayout" type="HBoxContainer" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="BaseStatsLayout" type="VBoxContainer" parent="MainPanel/MarginContainer/MainLayout/StatsLayout"]
custom_minimum_size = Vector2(103, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout"]
layout_mode = 2
text = "Temel Statlar"

[node name="BaseStatsGrid" type="GridContainer" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 3

[node name="Label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "STR"

[node name="str_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="str_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="Label2" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "DEX"

[node name="dex_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="dex_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="Label3" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "VIT"

[node name="vit_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="vit_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="Label4" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "WIS"

[node name="wis_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="wis_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="Label5" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "INT"

[node name="int_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="int_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="Label6" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "FOC"

[node name="foc_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "10"

[node name="foc_plus_button" type="Button" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/BaseStatsLayout/BaseStatsGrid"]
layout_mode = 2
text = "+"

[node name="VSeparator" type="VSeparator" parent="MainPanel/MarginContainer/MainLayout/StatsLayout"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/MarginContainer/MainLayout/StatsLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DerivedStatsLayout" type="VBoxContainer" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout"]
layout_mode = 2
text = "İkincil Statlar"

[node name="DerivedStatsGrid" type="GridContainer" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Fiz. Saldırı Gücü:"

[node name="pap_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "8"

[node name="Label3" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Büy. Saldırı Gücü:"

[node name="map_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label5" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "İyileştirme Gücü:"

[node name="healp_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label11" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Azami Can:"

[node name="max_hp_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label13" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Azami Mana:"

[node name="max_mp_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label15" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Fiz. Hasar Azaltma:"

[node name="pdef_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label17" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Büy. Hasar Azaltma:"

[node name="mdef_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label21" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Saldırı Hızı Bonusu:"

[node name="aspd_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label23" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Büyü Hızı Bonusu: "

[node name="cspd_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label7" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Fiz. Kritik Şans:"

[node name="pcrit_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label9" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Büy. Kritik Şans:"

[node name="mcrit_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label19" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Kaçınma Şansı:"

[node name="evasion_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label25" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "HP Yenilemesi: "

[node name="hp_regen_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label27" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "MP Yenilemesi:"

[node name="mp_regen_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0"

[node name="Label29" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Statü Direnci: "

[node name="debuff_resist_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label31" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Statü Başarısı: "

[node name="debuff_success_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label33" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Fiz. Kritik Hasar:"

[node name="pcrit_dmg_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "150%"

[node name="Label34" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Büy. Kritik Hasar:"

[node name="mcrit_dmg_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "150%"

[node name="Label35" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "İy. Kritik Şans:"

[node name="heal_crit_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label36" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Blok Şansı:"

[node name="block_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label37" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Mana Kullanımı:"

[node name="mana_reduc_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label38" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Bekleme Süresi Az.:"

[node name="cdr_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label39" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Buff/Debuff Süresi:"

[node name="buff_dur_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="Label40" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "Zırh Delme:"

[node name="p_pierce_value_label" type="Label" parent="MainPanel/MarginContainer/MainLayout/StatsLayout/ScrollContainer/DerivedStatsLayout/DerivedStatsGrid"]
layout_mode = 2
text = "0%"

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/MainLayout"]
layout_mode = 2
text = "Kapat"
